<package>
 <name>rosie_mapping</name>
  <version>0.1.0</version>
  <description>
    Local, global map + update.
  </description>
  <license>BSD</license>

  <maintainer email="niewalda@kth.se">Tobias Niewalda</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
